--- a/contacts.html
+++ b/contacts.html
@@ -6,8 +6,8 @@
 		<link rel="preload" href="./assets/fonts/icons.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Контакти</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1755700027048"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755700027048">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1755700359025"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755700359025">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -712,7 +712,7 @@
 					</div>
 				</div>
 			</div>
-			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC19klcOAZ-QCCGQt3iPzBxIYvoa-VMh5g"></script>
+			<script src="https://maps.googleapis.com/maps/api/js?key="></script>
 			<main class="page">
 				<section class="page__contacts contacts">
 					<div class="contacts__container">
