--- a/popups.html
+++ b/popups.html
@@ -6,8 +6,8 @@
 		<link rel="preload" href="./assets/fonts/icons.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Попапи</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1756514408368"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1756514408368">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1756719663089"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1756719663089">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -558,7 +558,7 @@
 									Я погоджуюсь на обробку персональних даних
 									<input type="checkbox">
 								</label>
-								<div class="review-popup__button button button--border">НАПИСАТИ ВІДГУК</div>
+								<button class="review-popup__button button button--border">НАПИСАТИ ВІДГУК</button>
 							</form>
 						</div>
 					</div>
