--- a/product.html
+++ b/product.html
@@ -6,8 +6,8 @@
 		<link rel="preload" href="./assets/fonts/icons.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Товар</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1756514408368"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1756514408368">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1756719663089"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1756719663089">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -558,7 +558,7 @@
 									Я погоджуюсь на обробку персональних даних
 									<input type="checkbox">
 								</label>
-								<div class="review-popup__button button button--border">НАПИСАТИ ВІДГУК</div>
+								<button class="review-popup__button button button--border">НАПИСАТИ ВІДГУК</button>
 							</form>
 						</div>
 					</div>
@@ -1008,14 +1008,182 @@ fill="var(--color, #FFF)" />
 											</div>
 										</div>
 									</details>
-									<a href="#" class="spoilers__item">
+									<button data-fls-scrollto="#feedback-section" data-fls-scrollto-header="" class="spoilers__item">
 										<div class="spoilers__title">
 											Відгуки
 											<svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewbox="0 0 19 19" fill="none">
 												<path d="M9 1L17.4853 9.48528M17.4853 9.48528L9 17.9706M17.4853 9.48528L0.514719 9.48528" stroke="var(--color, #111111)" stroke-width="2"></path>
 											</svg>
 										</div>
-									</a>
+									</button>
+								</div>
+								<div data-fls-spoilers="" class="hero-product__spoilers spoilers">
+									<details class="spoilers__item">
+										<summary class="spoilers__title">
+											Опис товару
+											<span class="plus-icon"></span>
+										</summary>
+										<div class="spoilers__body">
+											<div class="text">
+												<p>
+													Футболка Tactical Beard Club – це тактична футболка з якісного матеріалу, що ефективно відводить
+                    вологу та забезпечує комфорт під час фізичних навантажень. Має принт із зображенням "Tactical Beard
+                    Club", нанесений фарбою на тканину, стійкий до прання та розтягування.
+												</p>
+												<p>
+													<b>МАТЕРІАЛ:</b>
+													100% бавовна
+												</p>
+												<p>
+													<b>КОЛІР:</b>
+													Сірий
+												</p>
+											</div>
+										</div>
+									</details>
+									<details class="spoilers__item">
+										<summary class="spoilers__title">
+											Матеріал та догляд
+											<span class="plus-icon"></span>
+										</summary>
+										<div class="spoilers__body">
+											<div class="text">
+												<p>
+													Футболка Tactical Beard Club – це тактична футболка з якісного матеріалу, що ефективно відводить
+                    вологу та забезпечує комфорт під час фізичних навантажень. Має принт із зображенням "Tactical Beard
+                    Club", нанесений фарбою на тканину, стійкий до прання та розтягування.
+												</p>
+												<p>
+													<b>МАТЕРІАЛ:</b>
+													100% бавовна
+												</p>
+												<p>
+													<b>КОЛІР:</b>
+													Сірий
+												</p>
+											</div>
+										</div>
+									</details>
+									<button data-fls-scrollto="#feedback-section" data-fls-scrollto-header="" class="spoilers__item">
+										<div class="spoilers__title">
+											Відгуки
+											<svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewbox="0 0 19 19" fill="none">
+												<path d="M9 1L17.4853 9.48528M17.4853 9.48528L9 17.9706M17.4853 9.48528L0.514719 9.48528" stroke="var(--color, #111111)" stroke-width="2"></path>
+											</svg>
+										</div>
+									</button>
+								</div>
+								<div data-fls-spoilers="" class="hero-product__spoilers spoilers">
+									<details class="spoilers__item">
+										<summary class="spoilers__title">
+											Опис товару
+											<span class="plus-icon"></span>
+										</summary>
+										<div class="spoilers__body">
+											<div class="text">
+												<p>
+													Футболка Tactical Beard Club – це тактична футболка з якісного матеріалу, що ефективно відводить
+                    вологу та забезпечує комфорт під час фізичних навантажень. Має принт із зображенням "Tactical Beard
+                    Club", нанесений фарбою на тканину, стійкий до прання та розтягування.
+												</p>
+												<p>
+													<b>МАТЕРІАЛ:</b>
+													100% бавовна
+												</p>
+												<p>
+													<b>КОЛІР:</b>
+													Сірий
+												</p>
+											</div>
+										</div>
+									</details>
+									<details class="spoilers__item">
+										<summary class="spoilers__title">
+											Матеріал та догляд
+											<span class="plus-icon"></span>
+										</summary>
+										<div class="spoilers__body">
+											<div class="text">
+												<p>
+													Футболка Tactical Beard Club – це тактична футболка з якісного матеріалу, що ефективно відводить
+                    вологу та забезпечує комфорт під час фізичних навантажень. Має принт із зображенням "Tactical Beard
+                    Club", нанесений фарбою на тканину, стійкий до прання та розтягування.
+												</p>
+												<p>
+													<b>МАТЕРІАЛ:</b>
+													100% бавовна
+												</p>
+												<p>
+													<b>КОЛІР:</b>
+													Сірий
+												</p>
+											</div>
+										</div>
+									</details>
+									<button data-fls-scrollto="#feedback-section" data-fls-scrollto-header="" class="spoilers__item">
+										<div class="spoilers__title">
+											Відгуки
+											<svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewbox="0 0 19 19" fill="none">
+												<path d="M9 1L17.4853 9.48528M17.4853 9.48528L9 17.9706M17.4853 9.48528L0.514719 9.48528" stroke="var(--color, #111111)" stroke-width="2"></path>
+											</svg>
+										</div>
+									</button>
+								</div>
+								<div data-fls-spoilers="" class="hero-product__spoilers spoilers">
+									<details class="spoilers__item">
+										<summary class="spoilers__title">
+											Опис товару
+											<span class="plus-icon"></span>
+										</summary>
+										<div class="spoilers__body">
+											<div class="text">
+												<p>
+													Футболка Tactical Beard Club – це тактична футболка з якісного матеріалу, що ефективно відводить
+                    вологу та забезпечує комфорт під час фізичних навантажень. Має принт із зображенням "Tactical Beard
+                    Club", нанесений фарбою на тканину, стійкий до прання та розтягування.
+												</p>
+												<p>
+													<b>МАТЕРІАЛ:</b>
+													100% бавовна
+												</p>
+												<p>
+													<b>КОЛІР:</b>
+													Сірий
+												</p>
+											</div>
+										</div>
+									</details>
+									<details class="spoilers__item">
+										<summary class="spoilers__title">
+											Матеріал та догляд
+											<span class="plus-icon"></span>
+										</summary>
+										<div class="spoilers__body">
+											<div class="text">
+												<p>
+													Футболка Tactical Beard Club – це тактична футболка з якісного матеріалу, що ефективно відводить
+                    вологу та забезпечує комфорт під час фізичних навантажень. Має принт із зображенням "Tactical Beard
+                    Club", нанесений фарбою на тканину, стійкий до прання та розтягування.
+												</p>
+												<p>
+													<b>МАТЕРІАЛ:</b>
+													100% бавовна
+												</p>
+												<p>
+													<b>КОЛІР:</b>
+													Сірий
+												</p>
+											</div>
+										</div>
+									</details>
+									<button data-fls-scrollto="#feedback-section" data-fls-scrollto-header="" class="spoilers__item">
+										<div class="spoilers__title">
+											Відгуки
+											<svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewbox="0 0 19 19" fill="none">
+												<path d="M9 1L17.4853 9.48528M17.4853 9.48528L9 17.9706M17.4853 9.48528L0.514719 9.48528" stroke="var(--color, #111111)" stroke-width="2"></path>
+											</svg>
+										</div>
+									</button>
 								</div>
 							</div>
 						</div>
@@ -1390,7 +1558,7 @@ fill="var(--color, #FFF)" />
 							</div>
 						</div>
 					</section>
-					<section class="product__reviews reviews-product">
+					<section id="feedback-section" class="product__reviews reviews-product">
 						<div class="reviews-product__container">
 							<div class="reviews-product__aside">
 								<div class="reviews-product__title section-title">
