--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<link rel="preload" href="./assets/fonts/icons.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Головна</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1756719663089"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1756719663089">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1756768464675"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1756768464675">
 	</head>
 	<body>
 		<div class="wrapper">
 			<header data-fls-header="" class="header">
-				<div data-center-parent="" class="header__container">
+				<div class="header__container">
 					<button data-fls-menu="" class="header__menu-btn _icon-menu"></button>
 					<div data-fls-dynamic=".mobile-menu, 1199.98, 3" data-fls-spoilers="1199.98, max" class="header__menu menu">
 						<ul>
@@ -142,7 +142,7 @@
 							</li>
 						</ul>
 					</div>
-					<div data-center-el="" class="header__logo">
+					<div class="header__logo">
 						<svg xmlns="http://www.w3.org/2000/svg" width="78" height="77" viewbox="0 0 78 77" fill="none">
 							<g clip-path="url(#clip0_2001_1878)">
 								<path fill-rule="evenodd" clip-rule="evenodd" d="M15.5072 68.3085L18.7102 59.624H15.9861L13.5332 66.3968L11.0803 59.624H8.35449L11.5592 68.3085H15.5072Z" fill="var(--text-color)"></path>
