--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<link rel="preload" href="./assets/fonts/icons.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Головна</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1757071379312"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1757071379312">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1757333287309"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1757333287309">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -217,9 +217,15 @@
 													</button>
 												</div>
 											</div>
-											<div class="item-cart__size-label">
-												Розмір:
-												<span>S</span>
+											<div class="item-cart__options">
+												<div class="item-cart__option">
+													Розмір:
+													<span>S</span>
+												</div>
+												<div class="item-cart__option">
+													Колір:
+													<span>Red</span>
+												</div>
 											</div>
 											<div class="item-cart__price">1 090 ₴</div>
 										</div>
@@ -247,9 +253,15 @@
 													</button>
 												</div>
 											</div>
-											<div class="item-cart__size-label">
-												Розмір:
-												<span>S</span>
+											<div class="item-cart__options">
+												<div class="item-cart__option">
+													Розмір:
+													<span>S</span>
+												</div>
+												<div class="item-cart__option">
+													Колір:
+													<span>Red</span>
+												</div>
 											</div>
 											<div class="item-cart__price">1 090 ₴</div>
 										</div>
@@ -277,9 +289,15 @@
 													</button>
 												</div>
 											</div>
-											<div class="item-cart__size-label">
-												Розмір:
-												<span>S</span>
+											<div class="item-cart__options">
+												<div class="item-cart__option">
+													Розмір:
+													<span>S</span>
+												</div>
+												<div class="item-cart__option">
+													Колір:
+													<span>Red</span>
+												</div>
 											</div>
 											<div class="item-cart__price">1 090 ₴</div>
 										</div>
